manifests/monitoring/promstack/httproute-alertmanager.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hostnames:
    - alertmanager.ucdialplans.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tls
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: promstack-alertmanager
          namespace: monitoring
          port: 9093
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
